--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap');
+body {
+  height: 100vh;
+  margin: 0;
+  background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+  background-repeat: no-repeat;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  color: whitesmoke;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 3px solid hsl(217, 16%, 45%);
+  border-radius: 15px;
+  width: 700px;
+  height: 150px;
+  margin-top: 45px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  line-height: .25rem;
+  font-size: 1.3rem;
+  text-align: left;
+  padding-left: 30px;
+  font-weight: 600;
+}
+.score {
+  background-color: whitesmoke;
+  margin-right: 23px;
+  width: 150px;
+  height: 117px;
+  border-radius: 10px;
+  line-height: 3px;
+}
+.score h4 {
+  color: hsl(229, 64%, 46%);
+  letter-spacing: 3px;
+  font-weight: 600;
+  font-size: 1rem;
+}
+.score h1 {
+  color: hsl(229, 25%, 31%);
+  font-size: 4rem;
 }
