--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,8 @@ body {
   border-radius: 100%;
   height: 150px;
   width: 150px;
+  box-shadow: inset 0 0.5em 0.3em gray;
+  cursor: pointer;
 }
 .rockbg, .paperbg, .scissorsbg {
   display: flex;
@@ -83,6 +85,7 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 100%;
+  cursor: pointer;
 }
 .rockbg {
   grid-area: e;
@@ -101,4 +104,7 @@ body {
 .paperbg, .scissorsbg {
   margin-top: -100px;
   margin-bottom: 40px;
+}
+.rockbg:hover, .paperbg:hover, .scissorsbg:hover {
+  transform: scale(1.05);
 }
