--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,37 @@ body {
   transform: scale(1.05);
   cursor: pointer;
 }
+#play {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+#play h1 {
+  font-size: 3.5rem;
+}
+#play-again {
+  border: none;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  padding: 15px 65px;
+  border-radius: 10px;
+  background: whitesmoke;
+  cursor: pointer;
+}
+#play-again:hover {
+  color: hsl(349, 70%, 56%);
+}
+#userChoice .rockbg, #userChoice .paperbg, #userChoice .scissorsbg, #computerChoice .rockbg, #computerChoice .paperbg,#computerChoice .scissorsbg {
+  width: 300px;
+  height: 300px;
+}
+#userChoice .rock, #userChoice .paper, #userChoice .scissors, #computerChoice .rock, #computerChoice .paper, #computerChoice .scissors {
+  width: 225px;
+  height: 225px;
+}
+#userChoice .choiceImg, #computerChoice .choiceImg {
+  width: 101px;
+}
